Changed default image to swissmakers/fail2ban-ui:latest with swissmakers registry as a commented fallback

--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -1,7 +1,10 @@
 services:
   fail2ban-ui:
-    # Use pre-built image from registry
-    image: registry.swissmakers.ch/infra/fail2ban-ui:latest
+    # Use pre-built image from Docker Hub (default)
+    image: swissmakers/fail2ban-ui:latest
+
+    # Alternative: Use Swissmakers registry (fallback)
+    # image: registry.swissmakers.ch/infra/fail2ban-ui:latest
 
     # Or build from source (uncomment to use):
     # build:
