Change docker/setup-qemu-action to QEMU (binfmt) because missing docker support

--- a/.gitea/workflows/build-harbor.yml
+++ b/.gitea/workflows/build-harbor.yml
@@ -11,10 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-        with:
-          platforms: all
+      - name: Set up QEMU (binfmt) for multi-arch builds
+        run: |
+          podman run --privileged --rm docker.io/tonistiigi/binfmt --install all
 
       - name: Set up Podman buildx
         run: |
