--- a/docker-compose-allinone.example.yml
+++ b/docker-compose-allinone.example.yml
@@ -100,6 +100,9 @@ services:
       #   Authentik: https://authentik.example.com/application/o/your-client-slug/protocol/openid-connect/logout
       #   Pocket-ID: https://pocket-id.example.com/protocol/openid-connect/logout
       # - OIDC_LOGOUT_URL=https://keycloak.example.com/realms/your-realm/protocol/openid-connect/logout
+      # Optional: Skip login page and redirect directly to OIDC provider (default: false)
+      # When set to true, users are immediately redirected to the OIDC provider without showing the login page
+      # - OIDC_SKIP_LOGINPAGE=true
 
     volumes:
       # Required for fail2ban-ui: Stores SQLite database, application settings, and SSH keys of the fail2ban-ui container
